# ts-rs

./: .gitignore
config/: Cargo.toml
example/: Cargo.toml
example/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs  utils.rs
macros/src/attr/: enum.rs  field.rs  mod.rs  struct.rs  variant.rs
macros/src/types/: enum.rs  generics.rs  named.rs  newtype.rs
ts-rs/: Cargo.toml
ts-rs/src/: chrono.rs  export.rs  lib.rs  serde_json.rs  toml.rs
ts-rs/tests/: chrono.rs  docs.rs  enum_variant_annotation.rs  kebab-case.rs  skip.rs
