[package]
name = "example"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2021"

[dependencies]
ts-rs = { path = "../ts-rs", features = ["serde-compat", "uuid-impl"] }
serde = { version = "1.0.209", features = ["derive", "rc"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
