[package]
name = "ts-rs-macros"
version = "6.2.0"
authors = ["Moritz Bischof <moritz.bischof1@gmail.com>"]
edition = "2021"
description = "derive macro for ts-rs"
license = "MIT"
homepage = "https://github.com/Aleph-Alpha/ts-rs"
repository = "https://github.com/Aleph-Alpha/ts-rs"

[features]
serde-compat = ["termcolor"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.42"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full", "extra-traits"] }
Inflector = { version = "0.11.4", default-features = false }
termcolor = { version = "1.1.3", optional = true }
