[package]
name = "ts-rs"
version = "5.1.1"
authors = ["Moritz Bischof <moritz.bischof1@gmail.com>"]
edition = "2021"
license = "MIT"
description = "generate typescript bindings from rust types"
homepage = "https://github.com/Aleph-Alpha/ts-rs"
repository = "https://github.com/Aleph-Alpha/ts-rs"
keywords = ["typescript", "ts", "bindings", "ts-rs", "wasm"]
categories = ["development-tools::ffi", "development-tools::build-utils", "wasm", "web-programming"]
readme = "../README.md"

[features]
chrono-impl = ["chrono"]
bigdecimal-impl = ["bigdecimal"]
serde-json-impl = ["serde_json"]
uuid-impl = ["uuid"]
bytes-impl = ["bytes"]
serde-compat = ["ts-rs-macros/serde-compat"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies]
ts-rs-macros = { version = "5.1.0", path = "../macros" }
dprint-plugin-typescript = { version = "0.43" }
chrono = { version = "0.4.19", optional = true }
bigdecimal = {version = "0.1.2", features=["serde"], optional = true}
serde_json = { version = "1", optional = true }
uuid = { version = "0.8.2", optional = true }
bytes = { version = "1.0", optional = true }
